crates/perl-parser/tests/snapshots/ast_snap__ast_use_strict_warnings.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"use strict;\\nuse warnings;\")"
---
(source_file (use strict) (use warnings))
