crates/perl-parser/tests/snapshots/ast_snap__ast_variable_declaration.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"my $x = 42;\")"
---
(source_file (my_declaration (variable $ x)(number 42)))
