crates/perl-parser/tests/snapshots/ast_snap__errors_broken_open_arguments_then_followup.snap
---
source: crates/perl-parser/tests/ast_snap.rs
expression: "parse_errors(\"open my $fh, '<';\\nmy $ok = 1;\")"
---

