crates/perl-parser/tests/snapshots/ast_snap__errors_missing_rhs.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"my $x = ;\")"
---
Recovered from MissingOperand at InfixRhs (position 6)
