crates/perl-parser/tests/snapshots/ast_snap__errors_multiple_statements_errors.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"my $x = ;\\nmy $y = ;\")"
---
Recovered from MissingOperand at InfixRhs (position 16)
Recovered from MissingOperand at InfixRhs (position 6)
