crates/perl-parser/tests/snapshots/ast_snap__errors_truncated_hash.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"my %h = (a =>\")"
---
expected expression, found end of input at position 13
expected statement, found end of input at position 13
