crates/perl-parser/tests/snapshots/ast_snap__errors_unclosed_block.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"sub foo {\")"
---
Invalid syntax at position 9: Unclosed block: expected '}' but reached end of input
