crates/perl-parser/tests/snapshots/ast_snap__errors_unclosed_hash_subscript_and_followup.snap
---
source: crates/perl-parser/tests/ast_snap.rs
expression: "parse_errors(\"my $x = $h{foo;\\nmy $y = 2;\")"
---
Recovered from InsertedCloser at HashSubscript (position 14)
