crates/perl-parser/tests/snapshots/ast_snap__errors_unterminated_heredoc.snap
---
source: crates/perl-parser/tests/ast_snap.rs
assertion_line: 295
expression: "parse_errors(\"my $sql = <<'SQL';\\nselect * from users;\\n\")"
---
Invalid syntax at position 40: Unterminated heredoc: SQL
