crates/perl-parser/tests/snapshots/ast_snap__errors_unterminated_string_and_followup.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"my $x = \\\"oops;\\nmy $y = 1;\")"
---
expected expression, found unknown token at position 8
expected statement, found unknown token at position 8
